2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/36_convfloat_dans_all.deca
// Description :
//     Test sur convfloat avec toutes les comparaisons 
// Resultats :
//    Valide 
//
// Historique :
// cree le 12/01/2024

{
    1.2 > 3 ;

    1.2 < 3 ;

    1.2 == 3 ;

    1.2 != 3 ;
    
    1.2 >=  3 ;
    
    1.2 <= 3 ;

}