2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/08_init_int_par_bool.deca
// Description :
//     une affcetation non cohérante 
// Resultats :
//    Erreur Contexteulle : fichier.deca:11:12:le boolean ne peut pas être affecté à int
//
// Historique :
// cree le 01/01/2024

{
    boolean bool = true ;
    int x = bool ;
}